# ghl_langgraph_agent

./: .env.example  .env.template  .gitignore  AGENT_INBOX_GUIDE.md  CLAUDE.md  CLOUD_TESTING_GUIDE.md  DEPLOYMENT.md  DEPLOYMENT_ERRORS.md  DEPLOYMENT_GUIDE.md  Dockerfile  GHL_WEBHOOK_INTEGRATION.md  IMPROVEMENTS_SUMMARY.md  LANGGRAPH_DEPLOYMENT.md  LANGGRAPH_DEV_GUIDE.md  LANGGRAPH_IMPROVEMENTS.md  LOCAL_CLOUD_TESTING.md  MCP_REMOVAL_SUMMARY.md  README.md  TEST_RESULTS.md  WEBHOOK_STATUS.md  battery_consultation_config.md  check_deployment_status.py  deploy.sh  deployment_info.txt  docker-compose.yml  langgraph.json  pyproject.toml  requirements.txt  run_local.py  setup.py  start_dev.sh  start_local_cloud.sh  test_agent_direct.py  test_battery_consultation.py  test_cloud_deployment.py  test_complete_flow.py  test_comprehensive.py  test_contact_id_fix.py  test_context_debug.py  test_conversation_history.py  (+29 more)
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
ghl_agent/: config.yaml  config_loader.py  custom_app.py  main.py  models.py
knowledge/: Python SDK Reference.md  README.md  langgraph_application_structure.md  langgraph_assistants_overview.md  langgraph_authentication_access_control.md  langgraph_background_runs.md  langgraph_cli_complete.md  langgraph_cli_overview.md  langgraph_configurable_headers.md  langgraph_connect_auth_provider.md  langgraph_control_plane.md  langgraph_control_plane_api.md  langgraph_cron_jobs.md  langgraph_custom_authentication.md  (+57 more)
(+21 files in other folders)
